--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,57 @@
-# Global
+# Node.js
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Logs
+*.log
+
+# dotenv environment files
 .env
-.env.*     # incluye .env.local, .env.production, etc.
+.env.*.local
+
+# Build outputs
 dist/
 build/
+out/
+
+# Vite
+.vite/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS-specific files
 .DS_Store
+Thumbs.db
+
+# Coverage reports
+coverage/
+*.lcov
+
+# TypeScript
+*.tsbuildinfo
+
+# Supabase local emulator
+.supabase/
+
+# Optional: if you use GitHub Codespaces or other cloud IDEs
+*.code-workspace
+*.sw?
+
+# React Testing Library snapshots
+__snapshots__/
+
+# Misc
 *.log
-*.lock
-npm-debug.log*
-
-# React (frontend)
-frontend/.env
-frontend/.env.* 
-frontend/node_modules/
-frontend/build/
-
-# NestJS (backend)
-backend/node_modules/
-backend/dist/
-backend/.env
-backend/.env.*
+*.tgz
+*.gz
+*.zip
+*.bak
